k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: shopapp
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /api/v1/
        pathType: Prefix
        backend:
          service:
            name: spring-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: angular-service
            port:
              number: 80
